--- a/style.css
+++ b/style.css
@@ -45,5 +45,26 @@ body {
   .settings:hover {
     background: #d3d3d3;
   }
-
-
+  .loop-holder {
+    display: flex;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  
+  .loop-holder__text {
+      animation: textLoop 10s linear infinite;
+      font-size: 6vw;
+      padding-right: .35em;
+  }
+  
+  
+  @keyframes textLoop {
+      0% {
+          -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0)
+      }
+      100% {
+          -webkit-transform: translate3d(-100%, 0, 0);
+          transform: translate3d(-100%, 0, 0)
+      }
+  }
