--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
   margin-top: 0px;
 }
 
+
 .timer {
-    width: 100%;
-  margin-top: 0px;
+width: 100%;
+margin-top: 0px;
 text-align: center;
 }
 
@@ -21,22 +22,54 @@ body {
     margin-left:auto;
     margin-right:auto;
     text-align: center;
+
+  }
+
+.IMG-SPACE{
+display: block;
+margin: auto;
+margin-top: 30px;
+margin-bottom: 30px;
+text-align: center;
+padding:30px;
+}
+
+
+  .img-click{
+  box-shadow: 4px 4px 0 0 #000000;
+ transition: ease all .1s;
+ border-radius: 50%;  
+ max-width: 60%;
+ background-color: #000000;
+  }
+
+  .img-click:active{
+  transform: translateY(4px) translateX(4px);
+  box-shadow: 0px 0px 0 0 #000000;
   }
 
 
-   .round{
-    font-size: 12px;
-    color: #4D5259;
+
+
+
+
+.round{
+    flex:1;
+    margin: 0 auto;
+    font-size: 0.5em;
+    color: #000000;
     line-height: 1.5;
     font-weight: bold;
-    padding: .5em 2em;
+    padding: 1.2em 2em;
     background: #FFFFFF;
-    border: 2px solid #4D5259;
-    box-shadow: 4px 4px 0 0 #4D5259;
-    border-radius: 100px;
+    box-shadow: 4px 4px 0 0 #000000;
+    border-radius: 200px ;
     outline:0;
     transition: ease all .1s;
+    display:flex;
   } 
+
+
   .round:active {
     transform: translateY(4px) translateX(4px);
     box-shadow: 0px 0px 0 0 #4D5259;
@@ -46,14 +79,14 @@ body {
   }
   
   .settings {
-    font-size: 10px;
+    font-size: 2px;
     color: #4D5259;
     line-height: 1.5;
     font-weight: bold;
     padding: .5em 2em;
     background: #FFFFFF;
     border: 2px solid #4D5259;
-    box-shadow: 4px 4px 0 0 #4D5259;
+    box-shadow: 4px 4px 0 0 #000000;
     outline:0;
   }
   
@@ -75,9 +108,8 @@ body {
   
   .loop-holder__text {
       display: flex;
-
       animation: textLoop 10s linear infinite;
-      font-size: 6vw;
+      font-size: 11vw;
       text-indent: .55em;
       padding-right: .55em;
       align-self: auto;
