--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@
   font-family: "Smiley-Cookie";
   src: url(./font/Smiley-Click.otf);
 }
+
 @font-face {
-   font-family: "Grotesk";
-  src:url(./font/MonumentGrotesk-Mono.ttf);
+  font-family: "Grotesk";
+  src: url(./font/MonumentGrotesk-Mono.ttf);
 }
+
 
 .banderolle{
   width: 100%;
@@ -52,8 +54,10 @@ box-shadow: 4px 4px 0 0 #000000;
  border-radius: 50%;  
  max-width: 70%;
  background-color: #000000;
-  }
-  .img-click:active{
+}
+
+
+.img-click:active{
   transform: translateY(4px) translateX(4px);
   box-shadow: 0px 0px 0 0 #000000;
   }
@@ -66,52 +70,65 @@ box-shadow: 4px 4px 0 0 #000000;
 h4 {
   text-align: center;
   font-family: "Grotesk";
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
+
+
+
+/* button flex*/
+.container-btn-all{
+  margin-bottom: 1em;
+}
+
+.round01{
+  font-family: "Grotesk";
+  width: 300px;
+  max-height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  margin-bottom: 1em;
+  transition: ease all .1s;
+  background: #FFFFFF;
+  border: 2px solid #4D5259;
+  box-shadow: 4px 4px 0 0 #000000;
+  border-radius: 200px ;
+  padding-bottom: 10px; /* sa mere la pute ce truc */
+}
+
+
+/* button flex*/
+.img-col{
+  padding-top: 15px; /* sa mere la pute ce truc */
+padding-left: 5px;
+
+}
+
+
+.icon01{
+width: 30px;
+height: 30px;
+
+}
+
+
 .container-btn{
-  margin-left: 1.4em;
-  margin-right: 1.4em;
-  margin-bottom: 2em;
-}
-
-.button1{
-  display: flex;
-  flex-basis: 30%;
-  padding-bottom: 1.5em;
-
-}
-.button2{
-  display: flex;
-  padding-bottom: 1.5em;
 
 
 }
-.button3{
-  display: flex;
-
-}
 
 
-.round{
-    font-family: "Grotesk";
-    flex: 1;
-    font-size: 0.8em;
-    color: #000000;
-    line-height: 1.5;
-    font-weight: bold;
-    padding: 10px 10px;
-    background: #FFFFFF;
-    box-shadow: 4px 4px 0 0 #000000;
-    border-radius: 200px ;
-    outline:0;
-    transition: ease all .1s;
-  } 
 
 
-  .round:active {
+
+
+  .round01:active {
     transform: translateY(4px) translateX(4px);
     box-shadow: 0px 0px 0 0 #4D5259;
   }
-  .round:hover {
+  .round01:hover {
     background: #d3d3d3;
   }
   /* buttons du shop */
@@ -168,3 +185,15 @@ h4 {
           transform: translate3d(-100%, 0, 0)
       }
   }
+
+
+  .banderolle-bottom{
+  display: flex;
+  height: 50px;
+  background-color: rgb(189, 131, 255);
+  width: 100%;
+}
+
+.timer {
+ margin: auto;
+}
