--- a/style.css
+++ b/style.css
@@ -8,12 +8,44 @@
   src: url(./font/MonumentGrotesk-Mono.ttf);
 }
 
+@font-face {
+  font-family: "Monument";
+  src: url(./font/monumentextended-ultrabold.otf);
+}
 
+
+.double {
+  display: flex;
+  margin:0
+}
 .banderolle{
   width: 100%;
   margin-top: 0px;
+  margin-bottom: 0px;
 }
 
+h1{
+  margin-top: 25px;
+  margin-bottom: 0px;
+  max-width: 100%;
+  text-align: center;
+  font-family: "Monument";
+  font-size: 3em;
+  transform: scale(1, 2);
+  background-color: #00CC1F;
+  width: 100%;
+  color: white;
+  max-height: 50px;
+  padding-bottom: 5px;
+  
+}
+
+.gameInfo {
+  margin-top: 0;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
 
 .timer {
 width: 100%;
@@ -29,7 +61,7 @@ body {
 }
 .bodypart-container{
     width:80%;
-    margin-top: 0;
+    margin-top: 40px;
     margin-left:auto;
     margin-right:auto;
     text-align: center;
@@ -39,10 +71,10 @@ body {
 .IMG-SPACE{
 display: block;
 margin: auto;
-margin-top: 30px;
-margin-bottom: 30px;
+margin-top: 20px;
+margin-bottom: 0px;
 text-align: center;
-padding:30px;
+padding:15px;
 }
 /* container de l'image - gere l'espace */
 
@@ -67,6 +99,11 @@ box-shadow: 4px 4px 0 0 #000000;
 
 
 /* button du shop */
+
+
+
+  
+
 h4 {
   text-align: center;
   font-family: "Grotesk";
@@ -78,18 +115,18 @@ h4 {
 
 /* button flex*/
 .container-btn-all{
-  margin-bottom: 1em;
+  margin-bottom:2.1em;
 }
 
 .round01{
   font-family: "Grotesk";
-  width: 300px;
+  width: 340px;
   max-height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: auto;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   transition: ease all .1s;
   background: #FFFFFF;
   border: 2px solid #4D5259;
@@ -189,11 +226,13 @@ height: 30px;
 
   .banderolle-bottom{
   display: flex;
-  height: 50px;
+  height: 75px;
   background-color: rgb(189, 131, 255);
   width: 100%;
 }
 
 .timer {
  margin: auto;
+ font-family: "Monument";
+ font-size: 1.5em;
 }
