--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
   margin-top: 0px;
   margin-left: 0px;
   margin-right: 0px;
+  margin-bottom: 0px;
   align-items: center;
 }
 .bodypart-container{
@@ -108,8 +109,8 @@ h4 {
   text-align: center;
   font-family: "Grotesk";
   margin-bottom: 10px;
-  margin-top: 10px;
-}
+  margin-top: -40px;
+} /* only for iphone 12pro */
 
 
 
