--- a/style.css
+++ b/style.css
@@ -81,17 +81,16 @@ padding:15px;
 
 /* shadow de l'image */
 .img-click{
-box-shadow: 4px 4px 0 0 #000000;
- transition: ease all .1s;
+box-shadow: 10px 5px 0 0 #000000;
+ transition: ease all 1ms;
  border-radius: 50%;  
  max-width: 70%;
  background-color: #000000;
 }
 
-
 .img-click:active{
-  transform: translateY(4px) translateX(4px);
-  box-shadow: 0px 0px 0 0 #000000;
+  transform: translateY(4px) translateX(10px);
+  box-shadow: 5px 3px 0 0 #000000;
   }
  /* shadow de l'image */
 
@@ -130,7 +129,7 @@ h4 {
   transition: ease all .1s;
   background: #FFFFFF;
   border: 2px solid #4D5259;
-  box-shadow: 4px 4px 0 0 #000000;
+  box-shadow: 0px 7px 0 1px #000000;
   border-radius: 200px ;
   padding-bottom: 10px; /* sa mere la pute ce truc */
 }
@@ -162,7 +161,7 @@ height: 30px;
 
 
   .round01:active {
-    transform: translateY(4px) translateX(4px);
+    transform: translateY(6px) translateX(0px);
     box-shadow: 0px 0px 0 0 #4D5259;
   }
   .round01:hover {
