--- a/style.css
+++ b/style.css
@@ -73,11 +73,14 @@ body {
 /* container de l'image - gere l'espace */
 .IMG-SPACE{
 display: block;
-margin: auto;
+margin: 0 auto;
 margin-top: 5px;
 margin-bottom: 0px;
 text-align: center;
 padding:0px;
+position: relative;
+border-radius: 50%;
+
 }
 /* container de l'image - gere l'espace */
 
@@ -158,9 +161,22 @@ height: 30px;
 
 }
 
+/* star CSS */
+#img-action
+{
+  max-width: 60px;
+  max-height: 60px;
+}
 
-
-
+#actionClicker
+{
+  position: absolute;
+  pointer-events: none;
+  display: none;
+  opacity: 0;
+  transition: all 0.3s ease-out;
+}
+/* star CSS */
 
 
   .round01:active {
