--- a/style.css
+++ b/style.css
@@ -70,17 +70,13 @@
   .IMG-SPACE{
   display: block;
   margin: 0 auto;
-  margin-bottom:0.5vh;
+  margin-top: 5px;
+  margin-bottom: 0px;
   text-align: center;
   padding:0px;
   position: relative;
   border-radius: 50%;
-  }
 
-  .leftContent{
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-top:0px;
   }
   /* container de l'image - gere l'espace */
 
@@ -90,7 +86,7 @@
   box-shadow: 0px 8px 0 0 #000000;
   transition: ease all 1ms;
   border-radius: 50%;  
-  width: 275px;
+  max-width: 70%;
   background-color: #000000;
   }
 
@@ -119,17 +115,15 @@
     text-align: center;
     font-family: "Grotesk";
     margin-bottom: 10px;
-    margin-top: 5px;
+    margin-top: 10px;
   } /* only for iphone 12pro */
 
 
 
   /* button flex*/
-   .container-btn-all {
-          padding-top: 0vh;
-          margin-bottom: 10vh;
-          
-        }
+  .container-btn-all{
+    margin-bottom:2.1em;
+  }
 
   .round01{
     font-family: "Grotesk";
@@ -168,10 +162,7 @@
   font-size: 120%;
   padding-bottom: 5px;
   }
-.contentContainer{
-  padding-top: 0px;
 
-}
   /* star CSS */
   #img-action
   {
@@ -212,9 +203,8 @@
         font-size: 10vw;
         text-indent: .55em;
         align-self: auto;
-        padding-top:0.5vh;
-        margin-top: 1vh;
-        padding-bottom: 0.5vh;
+        padding-top: 12px;
+        padding-bottom: 1px;
         color: white;
         font-family: "Smiley-Cookie";
     }
@@ -237,7 +227,7 @@
   display: flex;
   white-space: nowrap;
   overflow: hidden;
-  background-color: #BD83FF;
+  background-color: #BD83FF; 
     }
 
   .loop-holder__text_fenzy {
@@ -247,7 +237,7 @@
         font-size:8vh;
         text-indent: .55em;
         align-self: auto;
-        padding-top:2vh;
+        padding-top:16px;
         padding-bottom:0;
         color: white;
         font-family: "Smiley-Cookie";
@@ -290,20 +280,16 @@
       text-align: center;
       padding:0px;
       position: relative;
-      padding-top: 7vh;
       border-radius: 50%;
-      width: 500px;
-      }
-      .gameInfo{
-      height: 200px;
+      max-width: 75%;
       }
       h1{
-       margin-top: 29px;
+        margin-top: 15px;
         margin-bottom: 0px;
         max-width: 100%;
         text-align: center;
         font-family: "Smiley-Cookie";
-        font-size: 10em;
+        font-size: 3em;
         background-color: #00CC1F;
         width: 100%;
         color: white;
@@ -315,7 +301,7 @@
         font-size: 5vw;
         text-indent: .55em;
         align-self: auto;
-        padding-top: 14px;
+        padding-top: 12px;
         padding-bottom: 1px;
         color: white;
         font-family: "Smiley-Cookie";
@@ -332,8 +318,8 @@
         flex: 1 1;
       }
       .container-btn-all {
-        padding-top: 13vh;
-        margin-bottom: 0px;
+        padding-top: 2px;
+        
       }
       .round01{
         margin-bottom: 3em;
@@ -349,20 +335,9 @@
       bottom: 0;
       left: 0;
       }
-   .loop-holder__text_fenzy {
-            display: flex;
-            height: 74px;
-            animation: textLoop 10s linear infinite;
-            font-size:7vh;
-            text-indent: .55em;
-            align-self: auto;
-            padding-top:15px;
-            padding-bottom:5px;
-            color: white;
-            font-family: "Smiley-Cookie";
-      }
+
       .leftContent{
-        margin-top: 7vh;
+        margin-top: 1em;
       }
     }
   /*########################################################*/
@@ -375,9 +350,8 @@
       padding:0px;
       position: relative;
       border-radius: 50%;
-      width: 400px;
-      padding-top: 2vh;
-      padding-bottom: 0.5vh;
+      max-width: 50%;
+      padding-top: 7vh;
       }
       .banderolle{
         width: 100%;
@@ -462,47 +436,31 @@
         .loop-holder__text{
           font-size:8vh;
         }
-        
   }
   /*########################################################*/
   @media screen and (min-width:1280px) {
-    
-    .img-click{
-      margin-top: auto;
-      
-    }
     .IMG-SPACE{
       display: block;
       margin: 0 auto;
-      margin-bottom: 3vh;
+      margin-top: 5px;
+      margin-bottom: 0px;
       text-align: center;
       padding:0px;
       position: relative;
-      width: 600px;
-    height: auto;
+      border-radius: 50%;
+      max-width: 75%;
       }
-
-
-      .gameInfo{
-      height: 200px;
-      }
-
-
       h1{
-        margin-top: 30px;
+        margin-top: 15px;
         margin-bottom: 0px;
         max-width: 100%;
         text-align: center;
         font-family: "Smiley-Cookie";
-        font-size: 10em;
+        font-size: 3em;
         background-color: #00CC1F;
         width: 100%;
         color: white;
         
-      }
-
-      .loop-holder_base{
-        max-height: 11vh;
       }
       .loop-holder__text {
         display: flex;
@@ -510,30 +468,26 @@
         font-size: 5vw;
         text-indent: .55em;
         align-self: auto;
-        padding-top: 19px;
+        padding-top: 12px;
         padding-bottom: 1px;
         color: white;
         font-family: "Smiley-Cookie";
       }
     .leftContent{
-      padding-top: 13vh;
-      padding-bottom: 3vh;
-
-
-
+      padding-top: 0px;
     }
 
 
       
       .contentContainer{
         display: flex;
-        padding-top: 0.1em;
+        padding-top: 0.5em;
       }
       .contentContainer > * {
         flex: 1 1;
       }
       .container-btn-all {
-        padding-top: 9vh;
+        padding-top: 2.7em;
         margin-bottom: 0px;
         
       }
@@ -567,7 +521,7 @@
             font-size:10vh;
             text-indent: .55em;
             align-self: auto;
-            padding-top:13px;
+            padding-top:16px;
             padding-bottom:0;
             color: white;
             font-family: "Smiley-Cookie";
@@ -576,7 +530,6 @@
         margin-bottom: 4.5em;
         size: 150%;
       }
-
     }    /*########################################################*/
   @media screen and (max-width:375px) {
     .IMG-SPACE{
@@ -587,9 +540,8 @@
       padding:0px;
       position: relative;
       border-radius: 50%;
-      width: 300px;
-      padding-top: 0vh;
-      padding-bottom: 0.5vh;
+      max-width: 50%;
+      padding-top: 1vh;
       }
       h1{
         margin-top: 15px;
